// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CodeSnippet copy confirmation is not shown by default 1`] = `
<div
  className="group relative mb-2 border "
>
  <pre
    className="overflow-x-scroll border bg-gray-100 p-2 leading-5"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <code
      className="font-mono"
    >
      const greeting = 'Hello, world!'
    </code>
  </pre>
</div>
`;

exports[`CodeSnippet copy guidance is not shown by default 1`] = `
<div
  className="group relative mb-2 border "
>
  <pre
    className="overflow-x-scroll border bg-gray-100 p-2 leading-5"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <code
      className="font-mono"
    >
      const greeting = 'Hello, world!'
    </code>
  </pre>
</div>
`;

exports[`CodeSnippet copy guidance is shown on hover 1`] = `
<div
  className="group relative mb-2 border "
>
  <pre
    className="overflow-x-scroll border bg-gray-100 p-2 leading-5"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <code
      className="font-mono"
    >
      const greeting = 'Hello, world!'
    </code>
  </pre>
</div>
`;

exports[`CodeSnippet copy guidance is shown on hover 2`] = `
<div
  className="group relative mb-2 border cursor-pointer"
>
  <pre
    className="overflow-x-scroll border bg-gray-100 p-2 leading-5"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <code
      className="font-mono"
    >
      const greeting = 'Hello, world!'
    </code>
  </pre>
  <div
    className="left pointer-events-none absolute top-0 flex h-full w-full items-center justify-center bg-black text-base font-bold text-white opacity-75"
  >
    Click to copy
  </div>
</div>
`;
